--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     const videos = [
       {
         id: "v1",
-        title: "Q4 Competitive: How to handle 6sense vs. X objection",
-        src: "https://cdn.coverr.co/videos/coverr-shoppings-9623/1080p.mp4", // replace with your files
-        durationSec: 140, // 2:20
+        title: "RevvyAI Demo",
+        src: ".assets/videos/Revy AI_ Campaign Performance & ROI.mov", // replace with your files
+        durationSec: 47, // 0:47
         captionsVtt: "",  // add a .vtt captions URL if you have it
       },
       {
