--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       {
         id: "v1",
         title: "RevvyAI Demo",
-        src: "./assets/videos/RevvyAI_demo.mov", // replace with your files
+        src: "./assets/videos/RevvyAI_demo.mp4", // replace with your files
         durationSec: 47, // 0:47
         captionsVtt: "",  // add a .vtt captions URL if you have it
       },
